--- a/Python Document II.ipynb
+++ b/Python Document II.ipynb
@@ -173,19 +173,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Conner Max Evan Jordan\n",
-      "Conner Max Evan Jordan\n",
-      "Conner Max Evan Jordan\n",
-      "Conner Max Evan Jordan\n"
+      "Connor\n",
+      "Max\n",
+      "Evan\n",
+      "Jordan\n"
      ]
     }
    ],
    "source": [
     "names = ['    coNNor', 'max', ' EVan ', 'JORDAN']\n",
-    "for i in range(len(names)):\n",
-    "    print('Conner', 'Max', 'Evan', 'Jordan')\n",
-    "   \n",
     "\n",
+    "#names_list = []\n",
+    "for name in names:\n",
+    "    print(name.strip().title())\n",
     "\n",
     "# HINT: You will need to use a for loop for iteration\n",
     "\n",
@@ -402,6 +402,7 @@
     "for name in l_teachers:\n",
     "    if \"C\" in name:\n",
     "        print(\"Found\")\n",
+    "#        print(name)\n",
     "    else:\n",
     "        print(\"Not found\")"
    ]
@@ -481,16 +482,16 @@
    ],
    "source": [
     "# while, remove\n",
-    "names = [\"Connor\", \"Noel\", \"Max\", \"Evan\", \"Rob\", \"Evan\"]\n",
+    "names = [\"Connor\", \"Noel\", \"Max\", \"Evan\", \"Evan\", \"Rob\" ]\n",
     "\n",
-    "#while \"Evan\" in names:\n",
-    "#    names.remove(\"Evan\")\n",
-    "#print(names)\n",
+    "while \"Evan\" in names:\n",
+    "    names.remove(\"Evan\")\n",
+    "print(names)\n",
     "\n",
-    "for name in names:\n",
-    "    if name == \"Evan\":\n",
-    "        names.remove(\"Evan\")\n",
-    "print(names)\n"
+    "#for name in names:\n",
+    "#    if name == \"Evan\":\n",
+    "#        names.remove(\"Evan\")\n",
+    "#print(names)\n"
    ]
   },
   {
@@ -510,7 +511,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['max', 2, 2, 2, 3, 3, 4, 'kevin', 'connor', 'bob', 'evan']\n"
+      "['connor', 'bob', 'evan', 'max', 2, 3, 4, 'kevin']\n"
      ]
     }
    ],
@@ -518,16 +519,13 @@
     "names = ['connor', 'connor', 'bob', 'connor', 'evan', 'max', 'evan', 2, 2, 2, 3, 3, 4, 'bob', 'kevin']\n",
     "# Hint 1: You will need an append\n",
     "# Hint 2: Using an empty list will make life easier name in names:\n",
-    "while 'connor' in names:\n",
-    "    names.remove('connor')\n",
-    "while 'bob' in names:\n",
-    "    names.remove('bob')\n",
-    "while 'evan' in names: \n",
-    "    names.remove('evan')\n",
-    "names.append('connor')\n",
-    "names.append('bob')\n",
-    "names.append('evan')\n",
-    "print(names)\n",
+    "names_copy = []\n",
+    "\n",
+    "for i in names:\n",
+    "    if i not in names_copy:\n",
+    "        names_copy.append(i)\n",
+    "print(names_copy)\n",
+    "\n",
     "   \n",
     "   \n",
     "\n"
@@ -583,7 +581,7 @@
     "        nums.append(i**2)\n",
     "print(nums)\n",
     "\n",
-    "#[variable, transform, condition]\n",
+    "#[transform, variable, condition]\n",
     "\n",
     "print('\\n')\n",
     "nums_comp = [i**2 for i in range(100) if i % 2 == 0]\n",
@@ -617,8 +615,10 @@
    "source": [
     "# square number comprehension\n",
     "\n",
-    "squares = [x**2 for x in range(10)]\n",
-    "print(squares)"
+    "#squares = [x**2 for x in range(10)]\n",
+    "#print(squares)\n",
+    "\n",
+    "print([x**2 for x in range(10)])\n"
    ]
   },
   {
@@ -639,9 +639,10 @@
     "\n",
     "names = ['Connor','Max', 'Evan', 'Rob']\n",
     "\n",
-    "first_char_comp = [name[0] for name in names]\n",
-    "print(first_char_comp)\n",
-    "\n"
+    "#first_char_comp = [name[0] for name in names]\n",
+    "#print(first_char_comp)\n",
+    "\n",
+    "print([name[0] for name in names])\n"
    ]
   },
   {
@@ -658,8 +659,10 @@
     }
    ],
    "source": [
-    "c_names = [first_name for first_name in names if first_name[0] == 'C']\n",
-    "print(c_names)"
+    "#c_names = [first_name for first_name in names if first_name[0] == 'C']\n",
+    "#print(c_names)\n",
+    "\n",
+    "print([first_name for first_name in names if first_name[0] == 'C'])\n"
    ]
   },
   {
@@ -679,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +703,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9136/532040669.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;31m# Looping over a tuple with an index using range and len\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mnumber\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtup_1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m     \u001b[0mpopped\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnum\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtup_1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtup_1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnumber\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_13900/532040669.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;31m# Looping over a tuple with an index using range and len\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mnumber\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtup_1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m     \u001b[0mpopped\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnum\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtup_1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtup_1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnumber\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'pop'"
      ]
     }
@@ -788,18 +791,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Hello World'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
     }
    ],
    "source": [
@@ -807,7 +807,8 @@
     "def sayHello():\n",
     "    return 'Hello World'\n",
     "\n",
-    "sayHello()\n"
+    "sayHello()\n",
+    "print(sayHello())"
    ]
   },
   {
@@ -819,15 +820,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (Temp/ipykernel_19528/545498793.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\jimtu\\AppData\\Local\\Temp/ipykernel_19528/545498793.py\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    return f'Hello, {first_name} {last_name}'\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your first name? Jim\n",
+      "Jim Turner\n"
      ]
     }
    ],
@@ -835,6 +836,7 @@
     "# Arguments or Parameters\n",
     "# Order matters\n",
     "# Variable can be any type of object\n",
+    "def printFullName(first_name,last_name):\n",
     "    return f'Hello, {first_name} {last_name}'\n",
     "\n",
     "a_name = input(\"What is your first name? \")\n",
@@ -879,9 +881,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello Mr  Ed'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def printHorseName(first, middle = '', last = \"Ed\"):\n",
     "    return f'Hello {first} {middle} {last}'\n",
@@ -899,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +921,7 @@
        "\"The hero's name is Superman and superpower is flying\""
       ]
      },
-     "execution_count": 1,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,9 +942,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "7\n",
+      "9\n",
+      "11\n",
+      "13\n",
+      "15\n",
+      "17\n",
+      "19\n"
+     ]
+    }
+   ],
    "source": [
     "def my_range(stop, start=0, step=1):\n",
     "    for i in range(start,stop,step):\n",
@@ -967,9 +995,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n",
+      "('DragonZord', 'vanilla', 2, 3)\n",
+      "{'testing': 'joel'}\n",
+      "DragonZord\n",
+      "vanilla\n",
+      "2\n",
+      "3\n",
+      "testing\n"
+     ]
+    }
+   ],
    "source": [
     "# Args stands for arguments and takes any number of arguments as parameters\n",
     "# Must be last if multiple parameters are present\n",
@@ -996,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1039,20 +1082,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Are you ready to quit?? no\n",
-      "What do you want to do? dream\n",
-      "dream\n",
-      "Ready Yet? quit\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def printInput(answer):\n",
     "    print(answer)\n",
@@ -1078,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1157,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1205,14 +1237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 3, 4, 5, 5, 6, 7, 8, 8, 9, 10, 11, 14)\n"
+      "(1, 5, 8, 9, 11, 14)\n"
      ]
     }
    ],
