--- a/Python Document III.ipynb
+++ b/Python Document III.ipynb
@@ -65,9 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Dave': '255 Main St', 'Sean': '522 1st St', 0: 'This is a value for the key or 0'}\n"
+     ]
+    }
+   ],
    "source": [
     "# Keys should be unique\n",
     "# Can use numbers or strings as keys\n",
@@ -98,9 +106,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "255 Main St\n",
+      "This is a value for the key or 0\n"
+     ]
+    }
+   ],
    "source": [
     "# dict[key]\n",
     "#   this returns the value\n",
@@ -119,9 +136,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 2018 Chevrolet Silverado\n"
+     ]
+    }
+   ],
    "source": [
     "# use the dict below\n",
     "truck = {\n",
@@ -142,9 +167,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Dave': '255 Main St',\n",
+       " 'Sean': '522 1st St',\n",
+       " 0: 'This is a value for the key or 0',\n",
+       " 'bob': 'From Ohio'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# dict(key) = value\n",
     "\n",
@@ -162,9 +201,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Dave': '255 Main St',\n",
+       " 'Sean': '522 1st St',\n",
+       " 0: 'This is a value for the key or 0',\n",
+       " 'bob': 'Nashville'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# dict[key] = value\n",
     "dict_3['bob'] = 'Nashville'\n",
@@ -181,9 +234,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Dave': '255 Main St',\n",
+       " 'Sean': '522 1st St',\n",
+       " 0: 'This is a value for the key or 0'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# del dict['key']\n",
     "del dict_3['bob']\n",
@@ -200,9 +266,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dave 255 Main St\n",
+      "Sean 522 1st St\n",
+      "0 This is a value for the key or 0\n"
+     ]
+    }
+   ],
    "source": [
     "# .items()\n",
     "# a, b, c = 1, 2, 3\n",
@@ -223,9 +299,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dave\n",
+      "Sean\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "# .keys()\n",
     "\n",
@@ -242,9 +328,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "255 Main St\n",
+      "522 1st St\n",
+      "This is a value for the key or 0\n"
+     ]
+    }
+   ],
    "source": [
     "# .values()\n",
     "for value in dict_3.values():\n",
@@ -266,9 +362,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max has blue eyes\n",
+      "Lilly has brown eyes\n",
+      "Barney has blue eyes\n",
+      "Larney has brown eyes\n",
+      "Ted has purple eyes\n"
+     ]
+    }
+   ],
    "source": [
     "# use the dict below\n",
     "\n",
@@ -294,9 +402,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Barney', 'blue'), ('Larney', 'brown'), ('Lilly', 'brown'), ('Max', 'blue'), ('Ted', 'purple')]\n",
+      "['Barney', 'Larney', 'Lilly', 'Max', 'Ted']\n",
+      "['blue', 'blue', 'brown', 'brown', 'purple']\n",
+      "['blue', 'blue', 'brown', 'brown', 'purple']\n"
+     ]
+    }
+   ],
    "source": [
     "# sorts variables in order\n",
     "# sorted(dict.values()) or dict.keys() or dict.items()\n",
@@ -318,10 +437,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Barbara\n",
+      "random_guy\n",
+      "random_girl\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = [\"Dave\",\"Randy\",\"Greg\",{\"random_guy\":\"Robert\", \"random_girl\":\"Barbara\"}]\n",
+    "\n",
+    "print(names[3]['random_girl'])\n",
+    "\n",
+    "# Get all keys from nested dictionary in a list\n",
+    "for keys in names[3].keys():\n",
+    "    print(keys)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -332,19 +469,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "water bottle\n"
+     ]
+    }
+   ],
    "source": [
     "# be careful when using numbers as keys in dictionaries, don't confuse them with indexes\n",
     "\n",
     "random_data = {\n",
-    "    'list1' : [54, 7, 11],\n",
+    "    'list_1' : [54, 7, 11],\n",
     "    \"2\" : ['smith', 'ipod', 'water bottle'],\n",
     "}\n",
     "\n",
-    "for key in random_data[\"2\"]:\n",
-    "    print(key)"
+    "#for key in random_data[\"2\"]:\n",
+    "#    print(key)\n",
+    "    \n",
+    "  \n",
+    "#for key in random_data[\"2\"][2]:\n",
+    "#    print(key)  \n",
+    "\n",
+    "print(random_data[\"2\"][2])\n",
+    "\n",
+    "    \n",
+    "#rint(random_data['list_1'][2])\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -356,9 +514,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.99\n",
+      "cho\n",
+      "va\n",
+      "oreo\n",
+      "PB\n"
+     ]
+    }
+   ],
    "source": [
     "# to get values, must traverse through keys\n",
     "food_dict = {\n",
@@ -386,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,9 +576,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "value\n",
+      "Elapsed time for dictionary: 0.0009953975677490234\n",
+      "9999999\n",
+      "Elapsed time for list: 0.7634682655334473\n"
+     ]
+    }
+   ],
    "source": [
     "# tracking time for dictionary\n",
     "start_time = time.time()\n",
@@ -453,9 +634,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_7544/2789342629.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     15\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnameList\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m             \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m \u001b[0mnames\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_7544/2789342629.py\u001b[0m in \u001b[0;36mnames\u001b[1;34m()\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[1;32mwhile\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m         \u001b[0mname\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"What is your name? \\n \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m         \u001b[0maddress\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"What is your address? \\n \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[0mnameList\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0maddress\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\ipykernel\\kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m   1004\u001b[0m                 \u001b[1;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1005\u001b[0m             )\n\u001b[1;32m-> 1006\u001b[1;33m         return self._input_request(\n\u001b[0m\u001b[0;32m   1007\u001b[0m             \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1008\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"shell\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\ipykernel\\kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m   1049\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1050\u001b[0m                 \u001b[1;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1051\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Interrupted by user\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1052\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1053\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Invalid Message:\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+     ]
+    }
+   ],
    "source": [
     "from IPython.display import clear_output\n",
     "# step 1: write a function that takes in information and stores it in a dictionary \n",
@@ -687,9 +883,8 @@
     "\n",
     "import math\n",
     "\n",
-    "\n",
-    "print(pi)\n",
-    "print(floor(pi))\n"
+    "print(math.pi)\n",
+    "print(math.floor(math.pi))"
    ]
   },
   {
@@ -709,7 +904,8 @@
     "# from math import floor\n",
     "\n",
     "from math import floor, pi\n",
-    "print(pi)\n"
+    "print(pi)\n",
+    "print(floor(pi))\n"
    ]
   },
   {
@@ -772,57 +968,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "What would you like from the store?\n",
-      "\n",
-      "Enter 'done' to quit shopping.\n",
-      "Enter 'cart' to show your current cart.\n",
-      "Enter 'delete' to delete an item from your cart.\n",
-      "Enter 'add' to get back to your cart.\n",
-      "\n",
-      "> apples\n",
-      "You added apples. Your cart now has 1 items.\n",
-      "> oranges\n",
-      "You added oranges. Your cart now has 2 items.\n",
-      "> bread\n",
-      "You added bread. Your cart now has 3 items.\n",
-      "> milk\n",
-      "You added milk. Your cart now has 4 items.\n",
-      "> cart\n",
-      "Here is your Cart :\n",
-      "apples\n",
-      "oranges\n",
-      "bread\n",
-      "milk\n",
-      "> bleach\n",
-      "You added bleach. Your cart now has 5 items.\n",
-      "> done\n",
-      "Here is your Cart :\n",
-      "apples\n",
-      "oranges\n",
-      "bread\n",
-      "milk\n",
-      "bleach\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'list' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_26148/3400195260.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     42\u001b[0m     \u001b[0maddItem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnew_item\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 44\u001b[1;33m \u001b[0mshopCart\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: 'list' object is not callable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "shopCart = []\n",
     "\n",
